operators-helm/operators/envoy-gateway/resources/templates/kubesandbox-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kubesandbox
  namespace: envoy-gateway-system
spec:
  infrastructure:
    labels:
      gateway: envoy
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: kubesandbox-gateway-config
  gatewayClassName: envoy
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
        - name: kubesandbox-cert
          namespace: envoy-gateway-system
    allowedRoutes:
      namespaces:
        from: All
